--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </ol>
       </div>
     </div>
+    <script type="text/javascript" src="js/phrases.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
